antlr/CCLParser.py
# Generated from /home/krab1k/Research/CCL/CCL.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CCLParser ( Parser ):

    grammarFileName = "CCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'where'", "'='", "'for'", "'to'", "':'", 
                     "'done'", "'for each'", "'atom'", "'bond'", "'such that'", 
                     "'^'", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "'sum'", 
                     "'['", "']'", "','", "'if'", "'is'", "'common'", "'parameter'", 
                     "'is property'", "'and'", "'or'", "'not'", "'<'", "'>'", 
                     "'!='", "'=='", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "COMMENT", "WS", "NUMBER", "NAME", "ERROR_CHAR" ]

    RULE_method = 0
    RULE_statement = 1
    RULE_assign = 2
    RULE_for_loop = 3
    RULE_for_each = 4
    RULE_expr = 5
    RULE_var = 6
    RULE_basename = 7
    RULE_subscript = 8
    RULE_annotation = 9
    RULE_constraint = 10
    RULE_arg = 11
    RULE_number = 12
    RULE_string = 13

    ruleNames =  [ "method", "statement", "assign", "for_loop", "for_each", 
                   "expr", "var", "basename", "subscript", "annotation", 
                   "constraint", "arg", "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    STRING=36
    COMMENT=37
    WS=38
    NUMBER=39
    NAME=40
    ERROR_CHAR=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class MethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._statement = None # StatementContext
            self.body = list() # of StatementContexts
            self._annotation = None # AnnotationContext
            self.annotations = list() # of AnnotationContexts

        def EOF(self):
            return self.getToken(CCLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCLParser.StatementContext)
            else:
                return self.getTypedRuleContext(CCLParser.StatementContext,i)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCLParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(CCLParser.AnnotationContext,i)


        def getRuleIndex(self):
            return CCLParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = CCLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                localctx._statement = self.statement()
                localctx.body.append(localctx._statement)
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CCLParser.T__2) | (1 << CCLParser.T__6) | (1 << CCLParser.NAME))) != 0)):
                    break

            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CCLParser.T__0:
                self.state = 33
                self.match(CCLParser.T__0)
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 34
                    localctx._annotation = self.annotation()
                    localctx.annotations.append(localctx._annotation)
                    self.state = 37 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CCLParser.NAME):
                        break



            self.state = 41
            self.match(CCLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(CCLParser.AssignContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(CCLParser.For_loopContext,0)


        def for_each(self):
            return self.getTypedRuleContext(CCLParser.For_eachContext,0)


        def getRuleIndex(self):
            return CCLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CCLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCLParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.assign()
                pass
            elif token in [CCLParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.for_loop()
                pass
            elif token in [CCLParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.for_each()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.lhs = None # VarContext
            self.rhs = None # ExprContext

        def var(self):
            return self.getTypedRuleContext(CCLParser.VarContext,0)


        def expr(self):
            return self.getTypedRuleContext(CCLParser.ExprContext,0)


        def getRuleIndex(self):
            return CCLParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = CCLParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            localctx.lhs = self.var()
            self.state = 49
            self.match(CCLParser.T__1)
            self.state = 50
            localctx.rhs = self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.identifier = None # Token
            self.value_from = None # Token
            self.value_to = None # Token
            self._statement = None # StatementContext
            self.body = list() # of StatementContexts

        def NAME(self):
            return self.getToken(CCLParser.NAME, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(CCLParser.NUMBER)
            else:
                return self.getToken(CCLParser.NUMBER, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCLParser.StatementContext)
            else:
                return self.getTypedRuleContext(CCLParser.StatementContext,i)


        def getRuleIndex(self):
            return CCLParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop" ):
                return visitor.visitFor_loop(self)
            else:
                return visitor.visitChildren(self)




    def for_loop(self):

        localctx = CCLParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_for_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(CCLParser.T__2)
            self.state = 53
            localctx.identifier = self.match(CCLParser.NAME)
            self.state = 54
            self.match(CCLParser.T__1)
            self.state = 55
            localctx.value_from = self.match(CCLParser.NUMBER)
            self.state = 56
            self.match(CCLParser.T__3)
            self.state = 57
            localctx.value_to = self.match(CCLParser.NUMBER)
            self.state = 58
            self.match(CCLParser.T__4)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                localctx._statement = self.statement()
                localctx.body.append(localctx._statement)
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CCLParser.T__2) | (1 << CCLParser.T__6) | (1 << CCLParser.NAME))) != 0)):
                    break

            self.state = 64
            self.match(CCLParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_eachContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.abtype = None # Token
            self.identifier = None # Token
            self._statement = None # StatementContext
            self.body = list() # of StatementContexts

        def NAME(self):
            return self.getToken(CCLParser.NAME, 0)

        def constraint(self):
            return self.getTypedRuleContext(CCLParser.ConstraintContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCLParser.StatementContext)
            else:
                return self.getTypedRuleContext(CCLParser.StatementContext,i)


        def getRuleIndex(self):
            return CCLParser.RULE_for_each

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_each" ):
                listener.enterFor_each(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_each" ):
                listener.exitFor_each(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_each" ):
                return visitor.visitFor_each(self)
            else:
                return visitor.visitChildren(self)




    def for_each(self):

        localctx = CCLParser.For_eachContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_each)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(CCLParser.T__6)
            self.state = 67
            localctx.abtype = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==CCLParser.T__7 or _la==CCLParser.T__8):
                localctx.abtype = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            localctx.identifier = self.match(CCLParser.NAME)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CCLParser.T__9:
                self.state = 69
                self.match(CCLParser.T__9)
                self.state = 70
                self.constraint(0)


            self.state = 73
            self.match(CCLParser.T__4)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                localctx._statement = self.statement()
                localctx.body.append(localctx._statement)
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CCLParser.T__2) | (1 << CCLParser.T__6) | (1 << CCLParser.NAME))) != 0)):
                    break

            self.state = 79
            self.match(CCLParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CCLParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class UnaryOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CCLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryOp" ):
                listener.enterUnaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryOp" ):
                listener.exitUnaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryOp" ):
                return visitor.visitUnaryOp(self)
            else:
                return visitor.visitChildren(self)


    class SumOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.identifier = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CCLParser.ExprContext,0)

        def NAME(self):
            return self.getToken(CCLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumOp" ):
                listener.enterSumOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumOp" ):
                listener.exitSumOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumOp" ):
                return visitor.visitSumOp(self)
            else:
                return visitor.visitChildren(self)


    class ParenOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CCLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenOp" ):
                listener.enterParenOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenOp" ):
                listener.exitParenOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenOp" ):
                return visitor.visitParenOp(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def number(self):
            return self.getTypedRuleContext(CCLParser.NumberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)


    class VarExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(CCLParser.VarContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarExpr" ):
                listener.enterVarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarExpr" ):
                listener.exitVarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarExpr" ):
                return visitor.visitVarExpr(self)
            else:
                return visitor.visitChildren(self)


    class BinOpContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.ExprContext
            super().__init__(parser)
            self.left = None # ExprContext
            self.op = None # Token
            self.right = None # ExprContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CCLParser.ExprContext)
            else:
                return self.getTypedRuleContext(CCLParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinOp" ):
                listener.enterBinOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinOp" ):
                listener.exitBinOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinOp" ):
                return visitor.visitBinOp(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CCLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CCLParser.T__11, CCLParser.T__12]:
                localctx = CCLParser.UnaryOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 82
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==CCLParser.T__11 or _la==CCLParser.T__12):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 83
                self.expr(7)
                pass
            elif token in [CCLParser.T__15]:
                localctx = CCLParser.ParenOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 84
                self.match(CCLParser.T__15)
                self.state = 85
                self.expr(0)
                self.state = 86
                self.match(CCLParser.T__16)
                pass
            elif token in [CCLParser.T__17]:
                localctx = CCLParser.SumOpContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 88
                self.match(CCLParser.T__17)
                self.state = 89
                self.match(CCLParser.T__18)
                self.state = 90
                localctx.identifier = self.match(CCLParser.NAME)
                self.state = 91
                self.match(CCLParser.T__19)
                self.state = 92
                self.match(CCLParser.T__15)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(CCLParser.T__16)
                pass
            elif token in [CCLParser.NAME]:
                localctx = CCLParser.VarExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 96
                self.var()
                pass
            elif token in [CCLParser.NUMBER]:
                localctx = CCLParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 97
                self.number()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 109
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = CCLParser.BinOpContext(self, CCLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 101
                        localctx.op = self.match(CCLParser.T__10)
                        self.state = 102
                        localctx.right = self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = CCLParser.BinOpContext(self, CCLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 103
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 104
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CCLParser.T__13 or _la==CCLParser.T__14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 105
                        localctx.right = self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = CCLParser.BinOpContext(self, CCLParser.ExprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 106
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 107
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CCLParser.T__11 or _la==CCLParser.T__12):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 108
                        localctx.right = self.expr(6)
                        pass

             
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basename(self):
            return self.getTypedRuleContext(CCLParser.BasenameContext,0)


        def subscript(self):
            return self.getTypedRuleContext(CCLParser.SubscriptContext,0)


        def getRuleIndex(self):
            return CCLParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = CCLParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.basename()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.subscript()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BasenameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def NAME(self):
            return self.getToken(CCLParser.NAME, 0)

        def getRuleIndex(self):
            return CCLParser.RULE_basename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasename" ):
                listener.enterBasename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasename" ):
                listener.exitBasename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasename" ):
                return visitor.visitBasename(self)
            else:
                return visitor.visitChildren(self)




    def basename(self):

        localctx = CCLParser.BasenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_basename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            localctx.name = self.match(CCLParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubscriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._NAME = None # Token
            self.indices = list() # of Tokens

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(CCLParser.NAME)
            else:
                return self.getToken(CCLParser.NAME, i)

        def getRuleIndex(self):
            return CCLParser.RULE_subscript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubscript" ):
                listener.enterSubscript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubscript" ):
                listener.exitSubscript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubscript" ):
                return visitor.visitSubscript(self)
            else:
                return visitor.visitChildren(self)




    def subscript(self):

        localctx = CCLParser.SubscriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subscript)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            localctx.name = self.match(CCLParser.NAME)
            self.state = 121
            self.match(CCLParser.T__18)
            self.state = 122
            localctx._NAME = self.match(CCLParser.NAME)
            localctx.indices.append(localctx._NAME)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CCLParser.T__20:
                self.state = 123
                self.match(CCLParser.T__20)
                self.state = 124
                localctx._NAME = self.match(CCLParser.NAME)
                localctx.indices.append(localctx._NAME)


            self.state = 127
            self.match(CCLParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AnnotationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CCLParser.RULE_annotation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprAnnotationContext(AnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.AnnotationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(CCLParser.VarContext,0)

        def expr(self):
            return self.getTypedRuleContext(CCLParser.ExprContext,0)

        def constraint(self):
            return self.getTypedRuleContext(CCLParser.ConstraintContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAnnotation" ):
                listener.enterExprAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAnnotation" ):
                listener.exitExprAnnotation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAnnotation" ):
                return visitor.visitExprAnnotation(self)
            else:
                return visitor.visitChildren(self)


    class ParameterAnnotationContext(AnnotationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CCLParser.AnnotationContext
            super().__init__(parser)
            self.name = None # Token
            self.ptype = None # Token
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(CCLParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterAnnotation" ):
                listener.enterParameterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterAnnotation" ):
                listener.exitParameterAnnotation(self)
